--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,20 @@ cryptography==45.0.5
 cssselect2==0.8.0
 dj-database-url==3.0.0
 Django==5.2
+et_xmlfile==2.0.0
 fonttools==4.58.5
+greenlet==3.2.3
 gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 lxml==6.0.0
+openpyxl==3.1.5
 oscrypto==1.3.0
 packaging==25.0
 pillow==11.3.0
 pycparser==2.22
 pydyf==0.11.0
+pyee==13.0.0
 pyHanko==0.29.1
 pyhanko-certvalidator==0.27.0
 pypdf==5.8.0
